<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/students_data"
        android:textColor="@color/darkPurple"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/insert_student_data"
        android:textColor="@color/darkPurple"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/button_bordered"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bordered"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bordered"
        android:hint="@string/user_image"/>

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bordered"
        android:hint="@string/subject" />

    <Button
        android:id="@+id/addDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bordered_v1"
        android:text="@string/add_data"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:elevation="10dp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_bordered"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/darkPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        android:elevation="10dp"
        app:backgroundTint="@null" />

</LinearLayout>